# paperless-hooks

./: LICENSE  README.md  paperless_api.py  paperless_hooks.py  pyproject.toml
backends/: base.py  django_ninja.py  fastapi.py  flask.py  http_server.py
